package com.shubham.app.snakeladder2.ideal.entity;

public interface BoardJump {

    int getStart();

    int getEnd();
}
