package com.shubham.app.snakeladder2.ideal.entity;

public interface Dice {

    int roll();
}
